--- a/index.html
+++ b/index.html
@@ -29,17 +29,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <style>
-        #snowflakes-container {
-            position: relative;
-            overflow: hidden;
-        }
-    </style>
 </head>
 
 <body id="top" class="ss-preload">
 
-    <div id="snowflakes-container">
+    <div>
         <!-- preloader
         ================================================== -->
         <div id="preloader">
@@ -77,10 +71,10 @@
                 <div class="column">
 
                     <div class="s-hero__content-about">
-                        <p style="font-size: 5vmin; padding-bottom: 100px; font-weight: 600;
+                        <!-- <p style="font-size: 5vmin; padding-bottom: 100px; font-weight: 600;
                     color: cornsilk; font-family: 'Inter'; margin: auto; line-height: 6vmin;">
-                            Merry Christmas <br>and <br>Happy New Year
-                        </p>
+                            Happy New Year
+                        </p> -->
 
                         <h1>I'm Tran Van Hoa.</h1>
 
